# FinMem-LLM-StockTrading

./: .env  .gitignore  .gitpod.yml  LICENSE  README.md  pyproject.toml  run.py  run_gemini.sh  run_opeai.sh  run_tgi.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  requirements.txt
FinMem-LLM-trading-main/: README.md
FinMem-LLM-trading-main/Visualize-metrics-test/: Visualize-results.ipynb  readme.md
FinMem-LLM-trading-main/Visualize-metrics-test/Actions/: TSLA_A2C_summary_data_seed2_full.csv  TSLA_DQN_summary_data_seed1_full.csv  TSLA_PPO_summary_data_seed1_full.csv  Tsla-new-full.csv  tsla_curie.csv
FinMem-LLM-trading-main/Visualize-metrics-test/LLM/: TSLA_GPT4.csv  dat_df_GPT3.5_turbo.csv
FinMem-LLM-trading-main/Visualize-metrics-test/Topk/: TSLA_top1.csv  TSLA_top10.csv  TSLA_top3.csv  TSLA_top5.csv
FinMem-LLM-trading-main/Visualize-metrics-test/character/: TSLA_averse_V6.csv  TSLA_seeking_V8.csv
FinMem-LLM-trading-main/config/: config.toml
FinMem-LLM-trading-main/puppy/: __init__.py  agent.py  chat.py  memorydb.py  portfolio.py
FinMem-LLM-trading-main/puppy/memory_functions/: __init__.py  access_counter.py  decay.py  importance_score.py  recency.py
FinMem-LLM-trading-main/puppy/prompts/: __init__.py  trade.py
Visualize-metrics-test/: COIN.ipynb  Character.ipynb  LLM.ipynb  Top-K.ipynb  Visualize-results.py  Wilcoxon-Test .py  Wilcoxon-Test.ipynb  metrics.ipynb  metrics.py  readme.md
Visualize-metrics-test/Actions/: action_df_tsla_park_v2.csv  readme.md
Visualize-metrics-test/LLM/: Tsla_GPT4_turbo.csv  dat_df_davicin003.csv  dat_df_llama.csv
Visualize-metrics-test/character/: readme.md
config/: config.toml  config_amzn.toml  config_coin.toml  config_msft.toml  config_new.toml  config_nflx.toml  tsla_gpt_config.toml
data-pipeline/: 01-Refinitiv_Real_Time_News_download.sql  01_Alpaca_News_API_download.py  01_SEC_API_10k10q_download.py  03-model_wrapper.py  03-summary.py  04-data_pipeline.py  06-Visualize-results.py  07-metrics.py
download-data/: 00_download_yfinance.py  02_download_transcript.py  03_process_eco_variables.ipynb  04_clean_data.ipynb  05_subset_data.ipynb
ofcourseistillloveyou-exp-test-yj/: pyproject.toml  run_opeai.sh  save_file.py
ofcourseistillloveyou-exp-test-yj/config/: tsla_gemini_config.toml  tsla_tgi_config.toml
ofcourseistillloveyou-exp-test-yj/data-pipeline/: 01_SEC_API_10k10q_download.py  02-Raw_News_Data_Cleaning_Refinitiv.py  05-get_sentiment_by_ticker.py  08-Wilcoxon-Test.py  README.md
ofcourseistillloveyou-exp-test-yj/puppy/: __init__.py  chat.py  environment.py  prompts.py  reflection.py  run_type.py
ofcourseistillloveyou-exp-test-yj/puppy/memory_functions/: access_counter.py
process_raw_data/: generate_all_data.py  generate_all_data_sub2.py  generate_test_data.py  get_message_sentiment.py
puppy/: agent.py  chat.py  embedding.py  environment.py  memorydb.py  portfolio.py  prompts.py  reflection.py
puppy/memory_functions/: __init__.py  compound_score.py  decay.py  recency.py
puppy/prompts/: eco.py  reflection.py  trade_out.py
